feat(validations): use go-playground validator
