# internal/docs/swagger.json
@@ -261,6 +261,11 @@
     "definitions": {
         "dto.CreateUserRequest": {
             "type": "object",
+            "required": [
+                "email",
+                "password",
+                "username"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -284,9 +289,7 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string",
-                    "maxLength": 72,
-                    "minLength": 8
+                    "type": "string"
                 }
             }
         },
